# buckets-splitwise

./: .env.example  .gitignore  LICENSE.md  README.md  authenticate.py  buckets_manager.py  config.template.yaml  pyproject.toml  settings.py  splitwise_manager.py  synch.py
