[tool.poetry]
name = "bucketssplitwiseimport"
version = "0.1.0"
description = "Expliring if it's viable to import Splitwise transactions into Buckets app"
authors = ["Pere <pere@perepicornell.com>"]
license = "Anti-capitalist software license (v 1.4)"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
splitwise = "^2.2.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
