[tool.poetry]
name = "bucketssplitwiseimport"
version = "0.9.0"
description = "Synchronize your Splitwise expenses into your Bucket's budget."
authors = ["Pere <pere@perepicornell.com>"]
license = "Anti-capitalist software license (v 1.4)"

[tool.poetry.dependencies]
python = "^3.8"
splitwise = "^2.2.0"
flask = "^1.1.2"
confuse = "^1.3.0"
tabulate = "^0.8.7"
yaspin = "^1.1.0"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
